@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-02-08 Sat 14:11 -->
+<!-- 2025-02-08 Sat 16:14 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2025-02-08 14:11:17</i></td>
+<td class="org-left"><i>2025-02-08 16:14:25</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2025-02-08 14:11:18</i></td>
+<td class="org-left"><i>2025-02-08 16:14:26</i></td>
 </tr>
 </tbody>
 </table>
@@ -323,6 +323,7 @@ Copyright &copy; 2025 Mitch Richling. All rights reserved.
 <li>Example: demo_corners.cpp</li>
 </ul></li>
 <li>Added mjr::ramCanvasTpl::getPxColorWrap()</li>
+<li>Added mjr::ramCanvasTpl::getPxColorChanWrap()</li>
 </ul></li>
 <li>Documentation
 <ul class="org-ul">
